<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:background="#fffaede5">

     <TextView
         android:layout_width="match_parent"
         android:layout_height="153dp"
         android:text="@string/Scanned_Expiration_Date"
         android:id="@+id/label1"
         android:textSize="50sp"
         android:gravity="center"
         android:textColor="#ffd4ad99"
         android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/txtExpDate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/date_hint"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/changeDate"
        android:id="@+id/btnChangeDate"

        android:layout_below="@+id/txtExpDate"
        android:layout_centerHorizontal="true"
        android:background="#ffffc19f" />


    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/btnCancel"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="62dp"
        android:layout_marginLeft="55dp"
        android:background="#ffffc19f" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/btnNext"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/txtExpDate"
        android:layout_alignEnd="@+id/txtExpDate"
        android:layout_marginBottom="62dp"
        android:layout_marginRight="-20dp"
        android:background="#ffffc19f" />


</RelativeLayout>

